# GatekeeperV2

./: .env  .envtemplate  .gitignore  AMP.py  AMP_Console.py  AMP_Handler.py  BANNER.md  CHANGELOG.md  COMMANDS.md  DB.py  DB_Update.py  Gatekeeper.py  LICENSE  PERMISSIONS.md  README.md  REGEX.md  WHITELIST.md  __init__.py  amp_ads.py  amp_api.py  amp_instance.py  amp_permissions.py  bot_config.py  bot_perms.json  bot_perms.py  bot_test.py  build.py  changelog  changelog.md  discordBot.db  discordBot.py  gitUpdate.py  ideas.md  loader.py  logger.py  old.db  pyproject.toml  requirements.txt  start.py  test.py  (+4 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: changelog.yml
amp/: ADS.py  API.py  API_old.py  Handler.py  Instance.py  Permissions.py  permission_nodes.md  setting_nodes.md  setting_nodes.txt  types.py  util.py
cogs/: AMP_cog.py  AMP_server_cog.py  AMP_tasks_cog.py  DB_cog.py  DB_server_cog.py  DB_user_cog.py  Permissions_cog.py  banner_cog.py  regex_cog.py  server_cog.py  util_cog.py  whitelist_cog.py
cogs/amp/: tag_cog.py
database/: __init__.py  banner.py  base.py  db.py  db_types.py  instance.py  old_db.py  schema.sql  server.py  settings.py  types.py  user.py
dev/: amp_template.py  chat-REDO.py  chatfilter-REDO.py  cog_template.py  consolefilters-REDO.py  endReset-REDO.py  message_parser.py
gatekeeper/: __init__.py  main.py  token.ini
modules/: AMP.py  DB.py  amp_module.py  banner_creator.py  database.py  db_module.py  message_parser.py  message_parserv2.py  module.py  parser.py  steam_finder.py
modules/Counter-Strike_Go/: amp_csgo.py  cog_csgo.py  csgo.py
modules/Factorio/: amp_factorio.py  cog_factorio.py  factorio.py
modules/Generic/: Generic.py  amp_generic.py  generic.py
modules/GenericModule/: Generic.py  amp_Generic.py
modules/Minecraft/: amp_minecraft.py  cog_minecraft.py  minecraft.py
modules/ProjectZomboid/: amp_projectzomboid.py  (+1 more)
templates/: numpy-overwrite.mustache
todo/: chatfilter-REDO.py  consolefilters-REDO.py  consolescan-REDO.py  timehandler-REDO.py
utils/: autocomplete.py  banner_creator.py  check.py  context.py  data_class.py  embed.py  embed_paginator.py  emoji_lib.py  emojis.py  formatters.py  name_converters.py  parser.py  permissions.py  utils.py
(+55 files in other folders)
